# research-planner

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
apps/server/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/server/prisma/: schema.postgres.prisma  schema.prisma
apps/server/scripts/: backfill_roles.ts  backfill_workspaces.ts  check_schemas_match.ts  cleanup_test_schemas.ts
apps/server/src/: app.ts  artifacts.ts  auth.ts  broadcaster.test.ts  broadcaster.ts  calendar.ts  events.ts  migrate.ts  notes.ts  presence.test.ts  presence.ts  seed.ts  seedFreshDemo.ts  workspace.ts  ws-schemas.ts
apps/server/src/test/: artifacts.test.ts  audit-round17.test.ts  auth.test.ts  calendar.test.ts  events.test.ts  invites.test.ts  migrate.test.ts  notes.test.ts  projects.test.ts  reset-demo.test.ts  scenarios.test.ts  schedule.test.ts  schema.postgres.sql  schema.sql  search.test.ts  (+5 more)
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.css  App.tsx  main.tsx
apps/web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
docs/: PRD-Research-Planner.v2.zh-CN.md  PRD-Research-Planner.zh-CN.md  TECH-ARCH-Research-Planner.zh-CN.md
docs/screenshots/: .gitkeep  README.md
scripts/: build-tauri-sidecar.sh  dev.sh
(+117 files in other folders)
