[package]
name = "research-planner"
version = "0.3.0"
description = "Research Planner — progress over deadlines"
authors = ["Tao"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "research_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
